maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:7: error: ';' expected but 'else' found.
        else {
        ^WallFollowerMaze:12: error: Unmatched closing brace '}' ignored here
        }
        ^